<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"
        >

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:weightSum="2"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5">
            <EditText
                android:id="@+id/edtValue1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/value_1_or_radius"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                android:paddingLeft="20dp"
                android:background="@drawable/edt_bg"
                android:fontFamily="@font/poppins_regular" />
            <EditText
                android:id="@+id/edtValue2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/value_2_or_height"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/edt_bg"
                android:fontFamily="@font/poppins_regular"/>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            style="@style/btnRed"
            android:text="C"
            android:fontFamily="@font/poppins_regular"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:layout_gravity="center"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMessage"
            android:gravity="center"
            android:textSize="12sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="@font/poppins_regular"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalculateRoot"
            style="@style/btnCalculate"
            android:text="Calculate Root"
            android:paddingHorizontal="20dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalculateArea"
            style="@style/btnCalculate"
            android:text="Calculate Area"
            android:paddingHorizontal="20dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddition"
                style="@style/btn"
                android:text="@string/addition"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubtraction"
                style="@style/btn"
                android:text="@string/subtraction"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivision"
                style="@style/btn"
                android:text="@string/division"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_marginTop="10dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiplication"
                style="@style/btn"
                android:text="@string/multiply"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRoot"
                style="@style/btn"
                android:text="@string/square_root"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPercentage"
                style="@style/btn"
                android:text="@string/percentage"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_marginTop="10dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPythagorasValue"
                style="@style/btn"
                android:text="@string/pythagoras_value"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCircleArea"
                style="@style/btn"
                android:text="@string/circle_area"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCylinderVolume"
                style="@style/btn"
                android:text="@string/cylinder_volume"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>